# flake8 does not support pypyroject yet: config in .flake8

[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]

[tool.setuptools_scm]
version_file = "src/lauterbach/trace32/pystart/__version__.py"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 120

[tool.autopep8]
max-line-length = 120

[tool.mypy]
python_version = 3.7                                   # for other occurrences search for python_version
strict = true
exclude = "(build|dist|doc|.*.egg-info|_functions.py)" # ignoring functions.py because it is a huge file

[[tool.mypy.overrides]]
module = 'tests.*'
disallow_untyped_defs = false # Allows defining functions without type annotations or with incomplete type annotations.
