# flake8 does not support pypyroject yet: config in .flake8

[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lauterbach-trace32-pystart"
authors = [{name= "Lauterbach GmbH", email = "support@lauterbach.com"}]
description = "start Lauterbach TRACE32"
requires-python = ">=3.7"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Debuggers",
	"Intended Audience :: Developers"
]
dynamic = ["version", "readme"]

[project.urls]
Homepage = "https://www.lauterbach.com"
Repository = "https://gitlab.com/lauterbach/pystart"
Documentation = "https://lauterbach-trace32-pystart.readthedocs.io"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type="text/markdown"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools_scm]
version_file = "src/lauterbach/trace32/pystart/__version__.py"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 120

[tool.autopep8]
max-line-length = 120

[tool.mypy]
python_version = 3.7                                   # for other occurrences search for python_version
strict = true
exclude = "(build|dist|doc|.*.egg-info|_functions.py)" # ignoring functions.py because it is a huge file

[[tool.mypy.overrides]]
module = 'tests.*'
disallow_untyped_defs = false # Allows defining functions without type annotations or with incomplete type annotations.
