[metadata]
name = lauterbach-trace32-pystart
version = attr: lauterbach.trace32.pystart.__version__
description = A short description of pystart
long_description = file: README.md
long_description_content_type="text/markdown"
url = https://www.lauterbach.com
author = Lauterbach GmbH
author_email = support@lauterbach.com
maintainer = Lauterbach GmbH
maintainer_email = support@lauterbach.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Debuggers
    Intended Audience :: Developers

[options]
packages = find_namespace:
package_dir =
    = src

[options.packages.find]
include = lauterbach.trace32.pystart
where = src

[options.package_data]
* = py.typed
